fix prescription
