# src/appointment-service/docs/swagger.json
@@ -308,13 +308,9 @@
             "required": [
                 "doctor_id",
                 "patient_id",
-                "scheduled_at",
-                "status"
+                "scheduled_at"
             ],
             "properties": {
-                "confirmed_at": {
-                    "type": "string"
-                },
                 "doctor_id": {
                     "type": "string"
                 },
@@ -326,27 +322,13 @@
                 },
                 "scheduled_at": {
                     "type": "string"
-                },
-                "status": {
-                    "type": "string",
-                    "enum": [
-                        "pending",
-                        "confirmed",
-                        "cancelled"
-                    ]
                 }
             }
         },
         "req.AppointmentEditReq": {
             "type": "object",
             "properties": {
-                "doctor_id": {
-                    "type": "string"
-                },
                 "note": {
-                    "type": "string"
-                },
-                "patient_id": {
                     "type": "string"
                 },
                 "scheduled_at": {
