# src/appointment-service/model/req/appointment_create_req.go
@@ -1,10 +1,8 @@
 package req
 
 type AppointmentCreateReq struct {
-	PatientID   string  `json:"patient_id" validate:"required"`
-	DoctorID    string  `json:"doctor_id" validate:"required"`
-	ScheduledAt string  `json:"scheduled_at" validate:"required"`
-	Status      string  `json:"status" validate:"required,oneof=pending confirmed cancelled"`
-	Note        string  `json:"note,omitempty"`
-	ConfirmedAt *string `json:"confirmed_at,omitempty"`
+	PatientID   string `json:"patient_id" validate:"required"`
+	DoctorID    string `json:"doctor_id" validate:"required"`
+	ScheduledAt string `json:"scheduled_at" validate:"required"`
+	Note        string `json:"note,omitempty"`
 }
