# src/prescription-service/model/req/prescription_create_req.go
@@ -1,11 +1,18 @@
 package req
 
+import "time"
+
+type PrescriptionMedReq struct {
+	MedicationID string    `json:"medication_id" validate:"required"`
+	Quantity     *int      `json:"quantity" validate:"required"`
+	Unit         string    `json:"unit" validate:"required"`
+	Instruction  *string   `json:"instruction,omitempty"`
+	IssuedAt     time.Time `json:"issued_at" validate:"required"`
+}
+
 type PrescriptionCreateReq struct {
-	PatientID     string `json:"patient_id" validate:"required"`
-	DoctorID      string `json:"doctor_id" validate:"required"`
-	AppointmentID string `json:"appointment_id" validate:"required"`
-	DrugName      string `json:"drug_name" validate:"required"`
-	Dosage        string `json:"dosage" validate:"required"`
-	Instruction   string `json:"instruction" validate:"omitempty"`
-	Status        string `json:"status" validate:"omitempty,oneof=not_collected collected"`
+	PatientID   string               `json:"patient_id" validate:"required"`
+	DoctorID    string               `json:"doctor_id" validate:"required"`
+	Status      string               `json:"status" validate:"required"`
+	Medications []PrescriptionMedReq `json:"medications"`
 }
